# demo-bikeshare

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  client.properties.template  country-map.json  deploy.sh  docker-compose.yml  hello.py  pyproject.toml  ref-arch.md  run.sh  service.yml  up.sh
bash/: provision.sh  tmux.sh
bikeshare/: globals.py
bikeshare/cli/: __init__.py
bikeshare/cli/textual/: systems.py
bikeshare/data/: flink.py  gbfs.py
bikeshare/data/kafka/: admin.py  consumer.py  producer.py  utils.py
flink/: branch_stations_by_status.sql  create_status_tables.sql  station_status_tables.sql
flink/branch_stations_by_status/: branch_offline.sql  branch_online.sql
flink/station_status_tables/: offline_table.sql  online_table.sql
journey/: globals.py  utils.py
journey/cli/: __init__.py  bikeshare.py
journey/cli/textual/: systems.py
journey/data/: flink.py
journey/data/kafka/: admin.py  producer.py  utils.py
journey/data/source/: gbfs.py
journey/source/: gbfs.py
schemas/: station_online.avsc  station_status.json  station_status_raw.json
terraform/: main.tf  outputs.tf  variables.tf
